--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ SENDER_EMAIL="" # The verified email you set up in SendGrid
 TWILIO_ACCOUNT_SID=""
 TWILIO_AUTH_TOKEN=""
 TWILIO_PHONE_NUMBER="" # Your Twilio phone number
+
+OPENAI_API_KEY=""
+
+HUGGINGFACE_API_TOKEN=""
